Fix scrolling when mobile menu is visible.

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -24,6 +24,9 @@
     margin: 0;
     overflow-x: hidden;
 }
+.body-no-scroll {
+    overflow-y: hidden;
+}
 
 .main {
     overflow: hidden;
